# discord-media-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
discord_media_downloader/: bot.py
