[tool.poetry]
name = "discord-media-downloader"
version = "0.1.0"
description = ""
authors = ["Kadir Burak Gündüz <kadir.burak.gunduz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"
requests = "^2.31.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable=["C0114", "C0115", "C0116"]

[tool.mypy]
ignore_missing_imports = "True"
ignore_missing_imports_per_module = "True"
check_untyped_defs = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
